--- a/tut_py_2_type_part1_numeric_str_tuple_list.ipynb
+++ b/tut_py_2_type_part1_numeric_str_tuple_list.ipynb
@@ -6,16 +6,16 @@
    "metadata": {},
    "source": [
     "## Numeric Types\n",
-    "int → Whole numbers: x = 10\n",
+    "int → Whole numbers: x = 10, -4, 7, 89,\n",
     "\n",
-    "float → Decimal numbers: y = 10.5\n",
+    "float → Decimal numbers: y = 10.5, -54.789, 3.567\n",
     "\n",
-    "complex → Complex numbers: z = 3 + 4j"
+    "complex → Complex numbers: z = 3 + 4j , -1 + 2j, etc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "f6bdaf07-053b-480f-be7a-599d5a7a0a53",
    "metadata": {},
    "outputs": [
@@ -23,15 +23,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "type of a is <class 'int'>\n",
-      "type of b is <class 'int'>\n",
-      "type of c is <class 'float'>\n",
-      "type of d is <class 'complex'>\n",
-      "######################\n",
-      "size of a is 28\n",
-      "size of b is 28\n",
-      "size of c is 24\n",
-      "size of d is 32\n"
+      "<class 'complex'>\n"
      ]
     }
    ],
@@ -41,10 +33,12 @@
     "c = 1.2\n",
     "d = 1+2j\n",
     "\n",
-    "print(f\"type of a is {type(a)}\")\n",
-    "print(f\"type of b is {type(b)}\")\n",
-    "print(f\"type of c is {type(c)}\")\n",
-    "print(f\"type of d is {type(d)}\")"
+    "print(type(d))\n",
+    "\n",
+    "# print(f\"type of a is {type(a)}\")\n",
+    "# print(f\"type of b is {type(b)}\")\n",
+    "# print(f\"type of c is {type(c)}\")\n",
+    "# print(f\"type of d is {type(d)}\")"
    ]
   },
   {
@@ -213,19 +207,19 @@
    "metadata": {},
    "source": [
     "## Sequence Types\n",
-    "str → String: s = \"Hello\"\n",
+    "**str** → String: s = \"Hello\"\n",
     "\n",
-    "list → Ordered, mutable: l = [1, 2, 3]\n",
+    "**list** → Ordered, mutable: l = [1, 2, 3]\n",
     "\n",
-    "tuple → Ordered, immutable: t = (1, 2, 3)\n",
+    "**tuple** → Ordered, immutable: t = (1, 2, 3)\n",
     "\n",
     "### 1. String (str) Operations\n",
-    "A string is an immutable sequence of characters."
+    "A string is an **immutable** sequence of characters."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "ef232980-ec92-45bf-b9c6-fc3af4c1b45e",
    "metadata": {},
    "outputs": [
@@ -233,28 +227,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "P\n",
-      "t\n",
-      "n\n",
-      "e\n",
-      "1111111111111111111111111111\n",
-      "\n",
-      "yth\n",
-      "yth\n",
-      "yoie\n",
-      "Pyt\n",
-      "thon is easy to learn\n",
-      "nrael ot ysae si nohtyP\n",
-      "l ot ysae si noh\n",
-      "asy to \n",
-      "22222222222222222222222222222\n",
-      "\n",
-      "ython i\n",
-      "Python is a\n",
-      "s a easy to learn.\n",
-      "33333333333333333333333333333\n",
-      "\n",
-      "Python is easy to learn is fun!\n",
+      "Python is easy to learn and is fun!\n",
       "Python is easy to learnPython is easy to learnPython is easy to learn\n",
       "True\n",
       "False\n",
@@ -263,17 +236,16 @@
       "26\n",
       "  python is cool language \n",
       "  PYTHON IS COOL LANGUAGE \n",
-      "  mython is cool language \n",
-      "3\n",
+      "  mython is CoOL language \n",
+      "2\n",
       "  python is cool language \n",
       "  Python Is Cool Language \n",
-      "python is cool language \n",
-      "  python is cool language\n",
-      "python is cool language\n",
+      "python is CoOL language \n",
+      "  python is CoOL language\n",
+      "python is CoOL language\n",
       "5555555555555555555555555555555\n",
       "\n",
-      "['today', ' is a good day', ' to learn something new.']\n",
-      "today, is a good day, to learn something new.\n"
+      "['today', ' is a good day', ' to learn something new.']\n"
      ]
     }
    ],
@@ -281,40 +253,40 @@
     "# String declaration\n",
     "s = \"Python is easy to learn\" # or 'Python', str('Python'), str(90)\n",
     "\n",
-    "# Accessing elements\n",
-    "print(s[0])    # 'P' (First character)\n",
-    "print(s[2])    # 't'\n",
-    "print(s[-1]) # 'n' (Last character)\n",
-    "print(s[-4]) # 'e' (4th car from  end)\n",
-    "print(\"1111111111111111111111111111\\n\")\n",
+    "# # Accessing elements: Indexing starts with 0 in python\n",
+    "# print(s[0])    # 'P' (First character)\n",
+    "# print(s[2])    # 't'\n",
+    "# print(s[-1]) # 'n' (Last character)\n",
+    "# print(s[-4]) # 'e' (4th char from  end)\n",
+    "# print(\"1111111111111111111111111111\\n\")\n",
     "\n",
-    "# Slicing : [start_position: end_position: step_size]. \n",
-    "# start_position by default is 0, end_position by defualt last idx, step_size by default is 1\n",
-    "print(s[1:4:1]) # 'yth' (From index 1 to 3 with  step size 1) \n",
-    "print(s[1:4])  # 'yth' (From index 1 to 3)\n",
-    "print(s[1:13:3]) # 'yoie' (From index 1 to 4 to 7 to 11.with  step size 1) \n",
+    "# # Slicing : [start_position: end_position: step_size]. \n",
+    "# # start_position by default is 0, end_position by default is last idx, step_size by default is 1\n",
+    "# print(s[1:4:1]) # 'yth' (From index 1 to 3 with  step size 1) \n",
+    "# print(s[1:4])  # 'yth' (From index 1 to 3)\n",
+    "# print(s[1:13:3]) # 'yoie' (From index 1 to 4 to 7 to 11.with  step size 1) \n",
     "\n",
-    "print(s[:3])   # 'Pyt' (First 3 characters)\n",
-    "print(s[2:])   # 'thon is easy to learn' (From index 2 to end)\n",
+    "# print(s[:3])   # This is s[0:3:1]: 'Pyt' (First 3 characters)\n",
+    "# print(s[2:])   # This is s[2:last_idx:1]: 'thon is easy to learn' (From index 2 to end)\n",
     "\n",
-    "print(s[::-1]) # 'nrael ot ysae si nohtyP' (start from last idx and go backward)\n",
-    "print(s[-5:2:-1]) # 'l ot ysae si noh' (start from idx -5, 5th from last, go upto idx 2, with step size -1, backward)\n",
-    "print(s[-12:-5]) # 'asy to' (start from  idx -12 to idx -5, 12th from last to 5th last cahr)\n",
-    "print(\"22222222222222222222222222222\\n\")\n",
+    "# print(s[::-1]) # 'nrael ot ysae si nohtyP' (start from last idx and go backward)\n",
+    "# print(s[-5:2:-1]) # 'l ot ysae si noh' (start from idx -5, 5th from last, go upto idx 2, with step size -1, backward)\n",
+    "# print(s[-12:-5]) # 'asy to' (start from  idx -12 to idx -5, 12th from last to 5th last cahr)\n",
+    "# print(\"22222222222222222222222222222\\n\")\n",
     "\n",
-    "# Slicing\n",
-    "msg = \"Python is a easy to learn.\"\n",
-    "print(msg[1:8])  # 'ython i' (From index 1 to 8)\n",
-    "print(msg[:11])   # 'Python is a' (First 11 characters)\n",
-    "print(msg[8:])   # 's a easy to learn.' (From index 8 to end)\n",
-    "print(\"33333333333333333333333333333\\n\")\n",
+    "# # Slicing\n",
+    "# msg = \"Python is a easy to learn.\"\n",
+    "# print(msg[2:8])  # 'thon i' (From index 2 to 8)\n",
+    "# print(msg[:11])   # 'Python is a' (First 11 characters)\n",
+    "# print(msg[8:])   # 's a easy to learn.' (From index 8 to end)\n",
+    "# print(\"33333333333333333333333333333\\n\")\n",
     "\n",
     "# String concatenation\n",
-    "new_str = s + \" is fun!\"\n",
-    "print(new_str)  # 'Python is fun!'\n",
+    "new_str = s + \" and is fun!\"\n",
+    "print(new_str)  \n",
     "\n",
     "# String repetition\n",
-    "print(s * 3)  # 'PythonPythonPython'\n",
+    "print(s * 3)  # repeat str s 3 times...concatenate s 3 times\n",
     "\n",
     "# Checking substring\n",
     "bool_th = \"th\" in s \n",
@@ -324,7 +296,7 @@
     "print(\"44444444444444444444444444444\\n\")\n",
     "\n",
     "# String methods\n",
-    "s = \"  python is cool language \" \n",
+    "s = \"  python is CoOL language \" \n",
     "print(len(s))\n",
     "print(s.lower())  \n",
     "print(s.upper())  \n",
@@ -394,10 +366,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "671174c5-5396-4fd5-86d9-f7df2b3a645c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'str' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[12], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# python  is immutable\u001b[39;00m\n\u001b[0;32m      2\u001b[0m s\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRepublic\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m----> 3\u001b[0m s[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mZ\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m      4\u001b[0m s\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'str' object does not support item assignment"
+     ]
+    }
+   ],
    "source": [
     "# python  is immutable\n",
     "s='Republic'\n",
@@ -411,7 +395,7 @@
    "metadata": {},
    "source": [
     "### 2️. List (list) Operations\n",
-    "A list is an ordered, mutable collection of elements."
+    "A list is an **ordered, mutable** collection of elements."
    ]
   },
   {
@@ -475,10 +459,10 @@
     "l = [True, True, False]\n",
     "print(l)\n",
     "\n",
-    "l = [20, \"apple\"] # list of integers, strings\n",
+    "l = [20, 42, \"apple\"] # list of integers, strings\n",
     "print(l)\n",
     "\n",
-    "l = [ [20, \"apple\"], [1, 3, 4] ] # list of list\n",
+    "l = [ [20, 34, \"apple\"], [1, 3, 4] ] # list of list\n",
     "print(l)\n",
     "\n",
     "fancy_l = [1, 3, '6', 3+7j, True, chars, [1,2,6], ]\n",
@@ -512,12 +496,12 @@
     }
    ],
    "source": [
-    "numbers = [10, 20, 30, 40, 50] # age, income, houses, size of plot,etc\n",
+    "numbers = [10, 30, 60, 70, 50] # age, income, houses, size of plot,etc\n",
     "\n",
     "# Accessing elements\n",
     "print(numbers[0])   # prints 1st number in the list 10\n",
-    "print(numbers[1])   # prints 2nd number in the list 20\n",
-    "print(numbers[3])   # prints 4th number in the list 40\n",
+    "print(numbers[1])   # prints 2nd number in the list 30\n",
+    "print(numbers[3])   # prints 4th number in the list 70\n",
     "\n",
     "print(numbers[-1])  # access last number 50\n",
     "print(\"1111111111111111111111111111\\n\")\n",
@@ -609,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "dfe2d6a0-7f13-4a72-b2eb-7bbc3b4df582",
    "metadata": {},
    "outputs": [
@@ -618,7 +602,7 @@
      "output_type": "stream",
      "text": [
       "After sort: [-6, 10, 17, 20, 25, 30, 40]\n",
-      "After reverse: [40, 30, 25, 20, 17, 10, -6]\n"
+      "After reverse: [17, 40, 25, 30, 20, 10, -6]\n"
      ]
     }
    ],
@@ -628,6 +612,7 @@
     "numbers.sort()\n",
     "print(f\"After sort: {numbers}\")  \n",
     "\n",
+    "numbers = [-6, 10, 20, 30, 25, 40, 17]\n",
     "# Reversing\n",
     "numbers.reverse()\n",
     "print(f\"After reverse: {numbers}\")  "
@@ -804,7 +789,7 @@
     }
    ],
    "source": [
-    "# 3. Looping Through a Nested List\n",
+    "# 3. OPTIONAL: Looping Through a Nested List\n",
     "matrix = [\n",
     "    [1, 2, 3],\n",
     "    [4, 5, 6],\n",
@@ -846,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "9b258979-f780-477e-856f-51283a595ffe",
    "metadata": {},
    "outputs": [
@@ -854,14 +839,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello Bob Julia\n"
+      "hello,Bob,Julia,Kumar\n"
      ]
     }
    ],
    "source": [
     "st = \" \" # or use comma\n",
-    "new_str = st.join([\"hello\", \"Bob\", \"Julia\"])\n",
-    "print(new_str)"
+    "new_str = st.join([\"hello\", \"Bob\", \"Julia\", \"Kumar\"])\n",
+    "print(new_str)\n",
+    "\n",
+    "# application: create CSV file"
    ]
   },
   {
@@ -1157,7 +1144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
