--- a/tut_py_1_print.ipynb
+++ b/tut_py_1_print.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "e724929f-5c74-4032-aa07-f4e32aaadc65",
    "metadata": {
     "colab": {
@@ -56,17 +56,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello world jupyter\n"
+      "1 Hello world\n",
+      "1 Hello world\n",
+      "2 Hello world. Today its raining.\n",
+      "3 Hello world. Today its raining.\n",
+      "4 Hello world. Today its raining. It is going to be humid today. Good luck\n"
      ]
     }
    ],
    "source": [
-    "# print(\"1 Hello world\") # octothorpe or hashtag\n",
+    "print(\"1 Hello world\") # octothorpe or hashtag\n",
+    "print('1 Hello world') # using single quote\n",
     "\n",
     "# using , to print series of stmts \n",
-    "print(\"2 Hello world. Today its raining\")\n",
-    "print(\"3 Hello world.\", \"Today its raining\")\n",
-    "print(\"4 Hello world.\", \"Today its raining\", \"It is going to be humid today.\", \"Good luck\")"
+    "print(\"2 Hello world. Today its raining.\")\n",
+    "print(\"3 Hello world.\", \"Today its raining.\")\n",
+    "print(\"4 Hello world.\", \"Today its raining.\", \"It is going to be humid today.\", \"Good luck\")"
    ]
   },
   {
@@ -98,16 +103,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "6d35dad3-2838-48f4-92a9-7cffa892b8f0",
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "EOL while scanning string literal (761972039.py, line 2)",
+     "evalue": "unterminated string literal (detected at line 2) (761972039.py, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[9], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(\"The universe is a vast and mysterious expanse, stretching far beyond\u001b[0m\n\u001b[1;37m                                                                               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m EOL while scanning string literal\n"
+      "\u001b[1;36m  Cell \u001b[1;32mIn[6], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(\"The universe is a vast and mysterious expanse, stretching far beyond\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unterminated string literal (detected at line 2)\n"
      ]
     }
    ],
@@ -123,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "e81e1bd5-8126-44b2-b29d-22cdf9548d7d",
    "metadata": {},
    "outputs": [
@@ -136,7 +141,7 @@
     }
    ],
    "source": [
-    "# multiline message using backslash \\\n",
+    "# OPTION1: multiline message using backslash \\\n",
     "print(\"The universe is a vast and mysterious expanse, stretching far beyond \\\n",
     "what our eyes can see. It's filled with billions of galaxies, each holding stars, \\\n",
     "planets, and secrets waiting to be discovered. From black holes that warp time \\\n",
@@ -147,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "238550be-5eed-47a5-a3ea-608086b4ed85",
    "metadata": {},
    "outputs": [
@@ -164,7 +169,7 @@
     }
    ],
    "source": [
-    "# Printing Multiple Lines Using Triple Quotes\n",
+    "# OPTION2: Printing Multiple Lines Using Triple Quotes\n",
     "print(\"\"\"Beneath the stars, the night wind sings,\n",
     "Of quiet dreams and silver wings.\n",
     "The moonlight dances on the sea,\n",
@@ -184,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "3bf35a72-b1fb-4351-9d6b-8a7e8198b261",
    "metadata": {
     "colab": {
@@ -208,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "3fcfda61-b646-4455-9f53-d4bb33f396cd",
    "metadata": {
     "id": "3fcfda61-b646-4455-9f53-d4bb33f396cd",
@@ -229,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "0192fb41-78cb-4e9f-b3d4-a4f1b56ee55c",
    "metadata": {
     "id": "0192fb41-78cb-4e9f-b3d4-a4f1b56ee55c",
@@ -240,17 +245,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello---how are you?---I am doing good.\n"
+      "Hello...how are you?...I am doing good.\n"
      ]
     }
    ],
    "source": [
-    "print(\"Hello\", \"how are you?\", \"I am doing good.\", sep=\"---\")"
+    "print(\"Hello\", \"how are you?\", \"I am doing good.\", sep=\"...\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "f7c6d905-927e-49ce-adb0-ed238e6fd4fe",
    "metadata": {
     "id": "f7c6d905-927e-49ce-adb0-ed238e6fd4fe",
@@ -281,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "31f82bf9-f1c2-462c-bd82-15e12a55c849",
    "metadata": {
     "id": "31f82bf9-f1c2-462c-bd82-15e12a55c849",
@@ -302,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "accf14af-ee29-4325-8870-ed5a846fc0c3",
    "metadata": {
     "colab": {
@@ -316,23 +321,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello. My name is  Alice . My brothers name is Rahim . My age is  5 . My weight is  4.3\n"
+      "Hello. My name is  Alice . My brothers name is Rahim . My age is  10 . My weight is  4.3\n"
      ]
     }
    ],
    "source": [
-    "# Printing Multiple Values\n",
+    "# 1) Printing Multiple Values\n",
     "name = \"Alice\" # a string variable\n",
     "brother = \"Rahim\"\n",
     "age = 10 # an int variable\n",
     "wt = 4.3 # float\n",
+    "\n",
+    "# print(name)\n",
+    "# print(name,brother)\n",
+    "\n",
     "\n",
     "print(\"Hello. My name is \", name, \". My brothers name is\", brother, \". My age is \", age , \". My weight is \", wt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "f3adadc0-dc7c-4a7c-a9f4-98ab02e5ba90",
    "metadata": {
     "colab": {
@@ -346,24 +355,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello. My name is Alice. My brothers name is Rahim. My age is 5. My weight is 4.3\n"
+      "Hello. My name is Alice. My brother name is Rahim. My age is 5. My weight is 4.3\n"
      ]
     }
    ],
    "source": [
-    "# Printing Multiple Values\n",
+    "# 2) Printing Multiple Values\n",
     "name = \"Alice\" # a string variable\n",
     "brother = \"Rahim\" # a string variable\n",
     "age = 5 # an int variable\n",
     "wt = 4.3 # an float variable\n",
     "\n",
-    "print(\"Hello. My name is {name}. My brother name is {brother}. My age is {age}. My weight is {wt}\")\n",
+    "# print(\"Hello. My name is {name}. My brother name is {brother}. My age is {age}. My weight is {wt}\")\n",
     "print(f\"Hello. My name is {name}. My brother name is {brother}. My age is {age}. My weight is {wt}\") "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "1f92aef6-96dc-493a-b795-9fe49479dcb7",
    "metadata": {
     "id": "1f92aef6-96dc-493a-b795-9fe49479dcb7",
@@ -379,7 +388,7 @@
     }
    ],
    "source": [
-    "# Printing Multiple Values\n",
+    "# 3) Printing Multiple Values\n",
     "name = \"Alice\" # a string variable\n",
     "brother = \"Rahim\" # a string variable\n",
     "age = 5 # an int variable\n",
@@ -391,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "8af4c00a-867f-4d42-bf51-f86ac3e8253e",
    "metadata": {
     "id": "8af4c00a-867f-4d42-bf51-f86ac3e8253e",
@@ -402,17 +411,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hey Sameer. How are you doing Sameer ?.         Its a good day Sameer to do some kayaking         today. What do you think Sameer ?\n"
+      "Hey Kumar. How are you doing Kumar ?. Its a good day Kumar to do some kayaking today. What do you think Kumar ?\n"
      ]
     }
    ],
    "source": [
-    "# Easy to change the names\n",
-    "name = 'Sameer'\n",
+    "# Why do we need variables ? A simple use case: Easy to change the names\n",
+    "name = 'Kumar'\n",
     "\n",
     "msg = f\"Hey {name}. How are you doing {name} ?. \\\n",
-    "        Its a good day {name} to do some kayaking \\\n",
-    "        today. What do you think {name} ?\"\n",
+    "Its a good day {name} to do some kayaking \\\n",
+    "today. What do you think {name} ?\"\n",
+    "\n",
     "print(msg)"
    ]
   },
@@ -442,16 +452,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "da1d614b-51d7-4203-b4b5-db688c9d3896",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Python(unlike SQL) is CASE SENSITIVE  <- VERY IMPORTANT\n",
+    "a = 3\n",
+    "A = 5\n",
+    "print(a) # python is case sensitive: var a and A are different \n",
+    "print(A)\n",
+    "\n",
+    "# print() # is not same as Print()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "bc199daa-4f07-4940-9fb4-e6a0b986f661",
    "metadata": {},
    "source": [
-    "## print using format the float numbers"
+    "## print using format: float numbers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "86c6d458-1592-4966-a2d0-ec3631b743ce",
    "metadata": {},
    "outputs": [
@@ -459,38 +494,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The number is 3.14\n",
       "############\n",
-      "Formatted number with comma: 1,234,567.89\n",
-      "############\n",
-      "1234567890123456789\n",
-      "1     |  10.12\n",
-      "2     |  20.25\n",
-      "3     |  30.37\n",
-      "############\n",
-      "Success rate: 85.7%\n"
+      "Success rate: 85.8%\n"
      ]
     }
    ],
    "source": [
     "number = 3.14159\n",
-    "print(f\"The number is {number:.2f}\")\n",
+    "# print(f\"The number is {number}\")\n",
+    "# print(f\"The number is {number:.2f}\")\n",
+    "\n",
+    "# print(\"############\")\n",
+    "# number = 1234567.8912\n",
+    "# print(f\"Formatted number with comma: {number:,.2f}\") # formats the number with commas as thousands separators and two decimal places.\n",
     "\n",
     "print(\"############\")\n",
-    "number = 1234567.8912\n",
-    "print(f\"Formatted number with comma: {number:,.2f}\") # formats the number with commas as thousands separators and two decimal places.\n",
+    "ratio = 0.857573\n",
+    "print(f\"Success rate: {ratio:.1%}\")\n",
     "\n",
-    "print(\"############\")\n",
-    "# left-aligns the integer i within 5 characters; right-aligns the float value within 6 characters, formatted to two decimal places.\n",
-    "print(\"1234567890123456789\")\n",
-    "for i in range(1, 4):\n",
-    "    value = i * 10.1234\n",
-    "    print(f\"{i:<5} | {value:>6.2f}\") \n",
-    "\n",
-    "\n",
-    "print(\"############\")\n",
-    "ratio = 0.857\n",
-    "print(f\"Success rate: {ratio:.1%}\")\n"
+    "# print(\"############OPTIONAL#######\")\n",
+    "# # left-aligns the integer i within 5 characters; right-aligns the float value within 6 characters, formatted to two decimal places.\n",
+    "# # print(\"1234567890123456789\")\n",
+    "# for i in range(1, 4):\n",
+    "#     value = i * 10.1234\n",
+    "#     print(f\"{i:<5} | {value:>6.2f}\") \n"
    ]
   },
   {
@@ -510,13 +537,15 @@
     "\\a\tASCII Bell (alert)\tprint(\"\\a\") (beeps...only works if supported on ur computer)\n",
     "\\b\tBackspace\t\"Hello\\b\" → \"Hell\"\n",
     "\\r\tCarriage return\t\"Hello\\rWorld\" → World\n",
+    "\\n  Newline\n",
+    "\\t  tab\n",
     "\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "id": "ca4069d4-6fee-440a-a222-80a5c10f676c",
    "metadata": {
     "colab": {
@@ -530,52 +559,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HelloWorld!\n",
-      "Hello\n",
-      "World!\n",
-      "Hello\n",
-      "World\n",
-      "Good\n",
-      "Morning!\n",
-      "#############################\n",
-      "How     are     you     Rahim!\n",
-      "How\tare\tyou\tRahim!\n",
-      "Hello\tWorld! This is my \tfirst example \tof tab\n",
-      "#############################\n",
-      "C:\\Users\\file.txt\n",
-      "It's a zenith\n",
-      "He said, \"You turned vermillion\"\n",
-      "His astute candor disarmed latent hostilitie\n",
-      " profound, serendipitous triumphs\n",
-      "Vertical\u000b\n",
-      " tab\tRarely\u000b\n",
-      " used\n"
+      "HelloWorld!\n"
      ]
     }
    ],
    "source": [
     "# print special character using / backslash\n",
     "print(\"HelloWorld!\")\n",
-    "print(\"Hello\\nWorld!\")\n",
-    "print(\"Hello\\nWorld\\nGood\\nMorning!\")  # Newline \\n\n",
-    "print(\"#############################\")\n",
-    "print(\"How     are     you     Rahim!\")  # Tab \\t\n",
-    "print(\"How\\tare\\tyou\\tRahim!\")  # Tab \\t\n",
-    "print(\"Hello\\tWorld! This is my \\tfirst example \\tof tab\")  # Tab\n",
-    "print(\"#############################\")\n",
-    "print(\"C:\\\\Users\\\\file.txt\") # C:\\Users\\file.txt\n",
-    "print('It\\'s a zenith') # It's a zenith\n",
-    "print(\"He said, \\\"You turned vermillion\\\"\")\n",
+    "# print(\"Hello\\nWorld!\")\n",
+    "# print(\"HenWorld\\nGood\\nMorning!\")  # Newline \\n\n",
+    "# print(\"#############################\")\n",
+    "# print(\"How     are     you     Rahim!\")  # Tab \\t\n",
+    "# print(\"How\\tare\\tyou\\tRahim!\")  # Tab \\t\n",
+    "# print(\"Hello\\tWorld! This is my \\tfirst example \\tof tab\")  # Tab\n",
+    "# print(\"#############################\")\n",
     "\n",
-    "#OPTIONAL\n",
-    "# print(\"\\a\")\n",
-    "# print(\"His astute candor disarmed latent hostilities\\b\") # His astute candor disarmed latent hostilitie\n",
-    "# print(\"Her tenacity ignited\\r profound, serendipitous triumphs\") # profound, serendipitous triumphs\n"
+    "# print(\"C:\\Users\\file.txt\") # Gave error\n",
+    "# print(\"C:\\\\Users\\\\file.txt\") # C:\\Users\\file.txt\n",
+    "\n",
+    "# print('It's a zenith') # Throws error\n",
+    "# print('It\\'s a zenith') # It's a zenith\n",
+    "\n",
+    "# print(\"He said, \\\"You turned vermillion\\\"\")\n",
+    "\n",
+    "# #OPTIONAL\n",
+    "# # print(\"\\a\")\n",
+    "# # print(\"His astute candor disarmed latent hostilities\\b\") # His astute candor disarmed latent hostilitie\n",
+    "# # print(\"Her tenacity ignited\\r profound, serendipitous triumphs\") # profound, serendipitous triumphs\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "id": "04bc9f33-6465-4c13-8887-5f4cfaaf0d80",
    "metadata": {
     "colab": {
@@ -609,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "4a4f6297-dca9-4326-9629-b16480cc3d83",
    "metadata": {
     "id": "4a4f6297-dca9-4326-9629-b16480cc3d83",
@@ -625,6 +640,7 @@
     }
    ],
    "source": [
+    "# application\n",
     "print(\"Today is sunny \\u2600. I want to talk with my \\u2764 daughter.\")"
    ]
   },
@@ -655,8 +671,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "82cad047-9762-4a7b-be21-815c5a888d35",
+   "metadata": {},
+   "source": [
+    "## write to a file: (OPTIONAL)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "2dd4139f",
    "metadata": {},
    "outputs": [],
@@ -666,6 +690,22 @@
     "print(\"Hello, world!\", file=f)  # Print to the file\n",
     "f.close()  # Don't forget to close the file"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8713bd82-ab2c-41ee-93eb-7d28880978a6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebaff0e6-80e5-49ba-a54d-b07cdd6077d7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -687,7 +727,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
