--- a/tut_py_2_0_operators.ipynb
+++ b/tut_py_2_0_operators.ipynb
@@ -17,37 +17,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n",
-      "5\n"
-     ]
-    }
-   ],
-   "source": [
-    "# First thing first: Python(unlike SQL) is CASE SENSITIVE  <- VERY IMPORTANT\n",
-    "a = 3\n",
-    "A = 5\n",
-    "print(a) # python is case sensitive: var a and A are different \n",
-    "print(A)\n",
-    "\n",
-    "# print() is not same as Print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "11\n",
       "11\n"
      ]
     }
@@ -57,7 +34,7 @@
     "x = 6\n",
     "y = 5\n",
     "res = x + y\n",
-    "print(res)"
+    "print(res) "
    ]
   },
   {
@@ -145,69 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "float"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(res)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Modulo Division (//) --> Floor Division --> without decimal values\n",
-    "x = 10\n",
-    "y = 5\n",
-    "res = x // y\n",
-    "print(res)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Modulo Division (//) --> Floor Division --> without decimal values\n",
-    "x = 10\n",
-    "y = 7\n",
-    "res = x // y\n",
-    "print(res)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -219,30 +134,51 @@
     }
    ],
    "source": [
-    "# Remainder Division (%)\n",
-    "x = 10\n",
-    "y = 7\n",
-    "res = x % y\n",
+    "# Modulo Division (//) --> Floor Division --> without decimal values\n",
+    "x = 17\n",
+    "y = 5\n",
+    "res = x // y\n",
     "print(res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9\n"
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Remainder Division (%)\n",
+    "x = 17\n",
+    "y = 5\n",
+    "res = x % y\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "81\n"
      ]
     }
    ],
    "source": [
     "#Exponentiation (**)\n",
     "x = 3\n",
-    "y = 2\n",
+    "y = 4\n",
     "res = x ** y\n",
     "print(res)"
    ]
@@ -257,15 +193,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
-      "<class 'bool'>\n"
+      "True\n"
      ]
     }
    ],
@@ -275,7 +210,7 @@
     "res = x > y # this is a boolean type\n",
     "\n",
     "print(res) \n",
-    "print(type(res))"
+    "# print(type(res))"
    ]
   },
   {
@@ -455,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +404,7 @@
    "source": [
     "x = \"a\"\n",
     "y = \"d\"\n",
-    "print(x > y) # for strings it performs lexicograph a< b < c < d...."
+    "print(x > y) # for strings it performs lexicograph a < b < c < d...."
    ]
   },
   {
@@ -493,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -505,14 +440,14 @@
     }
    ],
    "source": [
-    "a = \"bob\"\n",
-    "b = \"boa\"\n",
+    "a = \"bonit\"\n",
+    "b = \"bob\"\n",
     "print(a > b) # lexicograph"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -524,6 +459,7 @@
     }
    ],
    "source": [
+    "# OPTIONAL: compares list\n",
     "a = [1,2,3]\n",
     "b = [1,2,3,4]\n",
     "print(b<a)"
@@ -531,9 +467,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "x = chr(12)\n",
     "y = chr(13)\n",
@@ -559,28 +503,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "52\n"
+      "5\n"
      ]
     }
    ],
    "source": [
-    "# c could be salary\n",
+    "# assign variable a the value 5\n",
+    "a = 5\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "# c could be salary, hike a\n",
+    "c = 12\n",
+    "a = 3\n",
+    "\n",
+    "# c = c + a\n",
+    "# print(c)\n",
+    "\n",
     "c += a  #--> c = c + a\n",
     "print (c)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
    "source": [
     "c -= a  #--> c = c - a\n",
     "print (c)"
@@ -650,26 +627,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Logical Operator and, or, not\n",
+    "### Logical Operator: and, or, not\n",
     "- returns boolean variable: True or False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "False\n"
      ]
     }
    ],
    "source": [
     "# age is between 20 and 30\n",
-    "age = 25\n",
+    "age = 60\n",
     "\n",
     "res = age > 20 and age < 30\n",
     "print(res)"
@@ -677,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +709,7 @@
     }
    ],
    "source": [
-    "# Extra charge if high consumption and either urban area or AC is used.\n",
+    "# Extra charge if high consumption(more than 500) and either urban area or AC is used.\n",
     "units_used = 520\n",
     "area = 'urban'\n",
     "has_air_conditioner = True\n",
@@ -743,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +732,7 @@
     }
    ],
    "source": [
-    "# checks either if both subjects are >40 or total marks exceed 100.\n",
+    "# checks either if both subjects(science+math) marks are > 40 or total marks exceed 100.\n",
     "math_marks = 38\n",
     "science_marks = 65\n",
     "\n",
@@ -778,11 +755,12 @@
     }
    ],
    "source": [
+    "# The salary must be good(>25000) and either credit score is high or a guarantor is available.\n",
+    "\n",
     "salary = 30000\n",
     "credit_score = 650\n",
     "has_guarantor = True\n",
     "\n",
-    "# The salary must be good and either credit score is high or a guarantor is available.\n",
     "b = salary > 25000 and (credit_score > 700 or has_guarantor)\n",
     "\n",
     "print(b)"
@@ -790,13 +768,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "False\n",
+      "True\n",
       "False\n",
       "True\n",
       "True\n"
@@ -814,7 +794,9 @@
     "print(a or b) \n",
     "  \n",
     "# Print not a is False \n",
-    "print(not b) "
+    "print(not True)\n",
+    "print(not False)\n",
+    "print(not b)\n"
    ]
   },
   {
@@ -826,25 +808,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "True\n",
       "True\n"
      ]
     }
    ],
    "source": [
-    "x = 'University of Miami'  \n",
+    "x = 'University of Miami'\n",
+    "b = 'Mia' in x\n",
+    "\n",
+    "print(b)\n",
     "print('Mia' in x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -913,19 +899,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "False\n"
      ]
     }
    ],
    "source": [
-    "print('university' not in x) "
+    "print('University' not in x) "
    ]
   },
   {
@@ -962,6 +948,7 @@
     }
    ],
    "source": [
+    "# OPTIONAL\n",
     "lst = [1, 3, \"Universe talks through stars\"]\n",
     "print(1 in lst)\n",
     "print(2 in lst)\n",
@@ -1004,7 +991,7 @@
    "source": [
     "a1 = 3\n",
     "b1 = 6\n",
-    "print(a1 is b1)"
+    "print(a1 is b1) # checks if a1 and b1 are living in same memory address"
    ]
   },
   {
@@ -1028,7 +1015,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a1 = 3\n",
+    "b1 = 3\n",
+    "print(a1 is b1) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +1048,7 @@
    "source": [
     "a1 = 3\n",
     "b1 = a1\n",
-    "print(a1 is b1)"
+    "print(a1 is b1) "
    ]
   },
   {
@@ -1167,18 +1173,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Weather data not available yet\n"
+     ]
+    }
+   ],
    "source": [
-    "# real world example\n",
-    "result = None\n",
+    "# Simulate checking weather data\n",
+    "temperature = None  # No data yet\n",
+    "# temperature = 30  # temperature received from the weather API\n",
     "\n",
-    "if result is None:\n",
-    "    print(\"No result yet\")\n",
+    "if temperature is None:\n",
+    "    print(\"Weather data not available yet\")\n",
     "\n",
-    "if result is not None:\n",
-    "    print(\"Got a result\")"
+    "if temperature is not None:\n",
+    "    print(f\"The current temperature is {temperature}°C\")\n"
    ]
   },
   {
@@ -1325,7 +1340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
