--- a/tut_py_1_print.ipynb
+++ b/tut_py_1_print.ipynb
@@ -275,6 +275,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7da3f4b4-d729-444d-ba6e-f785b326d840",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a line.\n",
+      "This is another line.\n",
+      "This is another another line.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(\"This is a line.\")\n",
+    "print(\"This is another line.\")\n",
+    "print(\"This is another another line.\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "# print(\"This is a line.\", end=\"\\n\") # DEFAULT\n",
+    "# print(\"This is another line.\", end=\"\\n\")\n",
+    "# print(\"This is another another line.\", end=\"\\n\")\n",
+    "\n",
+    "\n",
+    "# print(\"This is a line.\", end=\" \")\n",
+    "# print(\"This is another line.\", end=\" \")\n",
+    "# print(\"This is another another line.\", end=\" \")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "242f038d-e5d5-4e45-8dc2-6255b8366f3c",
    "metadata": {
@@ -727,7 +761,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
