--- a/tut_py_2_type_part1_numeric_str_tuple_list.ipynb
+++ b/tut_py_2_type_part1_numeric_str_tuple_list.ipynb
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "8b90ec57-b597-4228-9c49-1c7515ee994d",
    "metadata": {},
    "outputs": [
@@ -789,7 +789,7 @@
     }
    ],
    "source": [
-    "# 3. OPTIONAL: Looping Through a Nested List\n",
+    "# 3. OPTIONAL: For Looping Through a Nested List\n",
     "matrix = [\n",
     "    [1, 2, 3],\n",
     "    [4, 5, 6],\n",
