--- a/tut_py_2_type_part2_dict_set.ipynb
+++ b/tut_py_2_type_part2_dict_set.ipynb
@@ -270,7 +270,7 @@
    "id": "d1deae01-3e12-4366-91eb-c5e11bb902b2",
    "metadata": {},
    "source": [
-    "### 3️. Iterating Over a Dictionary\n",
+    "### 3️. (OPTIONAL) Iterating Over a Dictionary using for loop\n",
     "Scenario: Printing each student's name and score."
    ]
   },
