--- a/tut_py_3_function_0_inbuilt-input-isinstance_etc_userDefined_practice.ipynb
+++ b/tut_py_3_function_0_inbuilt-input-isinstance_etc_userDefined_practice.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# FUNCTION: inbuilt and user-defined\n",
     "\n",
+    "**why do we need function?** make your code cleaner, reusable, and easier to manage\n",
+    "\n",
     "## in built function: input \n",
     "- examples of in built fn: print, input, int, float, len, range, type, isinstance, enumerate, list, tuple, dict, map, filter, any, etc\n",
     "- sorted"
@@ -763,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +781,7 @@
     "def calculate_simple_interest(principal, rate, time):\n",
     "    \"\"\"Calculates the simple interest earned on a principal amount.\n",
     "    \"\"\"\n",
-    "    simple_interest = (principal * rate * time)\n",
+    "    simple_interest = principal * rate * time\n",
     "    return simple_interest\n",
     "\n",
     "# Example usage of calculate_simple_interest\n",
@@ -1680,7 +1682,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
