--- a/tut_py_3_function_2_lambda_reduce_filter_map_any_all.ipynb
+++ b/tut_py_3_function_2_lambda_reduce_filter_map_any_all.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "0008ec2c-107a-44bd-be90-74d657e4b20a",
    "metadata": {},
    "outputs": [
@@ -30,20 +30,23 @@
     }
    ],
    "source": [
-    "def square(x):\n",
+    "def square(x): # takes only 1 parameter\n",
     "    return x * x\n",
     "\n",
-    "print(square(5))\n",
+    "res = square(5)\n",
+    "print(res)\n",
     "\n",
     "\n",
     "# REDO above using lambda\n",
-    "square = lambda x: x * x\n",
-    "print(square(5))  "
+    "square = lambda x: x * x # takes only 1 parameter\n",
+    "\n",
+    "res = square(5)\n",
+    "print(res)  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "5608376c-1ff4-46a5-b0c2-e83766ba0512",
    "metadata": {},
    "outputs": [
@@ -57,19 +60,19 @@
     }
    ],
    "source": [
-    "def add(a, b):\n",
+    "def add(a, b): # takes 2 parameter\n",
     "    return a + b\n",
     "\n",
     "print(add(3, 4)) \n",
     "\n",
     "# REDO above using lambda\n",
-    "add = lambda a, b: a + b\n",
+    "add = lambda a, b: a + b # takes 2 parameter\n",
     "print(add(3, 4))  # Output: 7"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "b3532118-b4cd-4d32-a08e-49cafced5e3b",
    "metadata": {},
    "outputs": [
@@ -77,16 +80,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Bob', 'Alice', 'Charlie']\n"
+      "['Carlos', 'John', 'Rodriguez']\n",
+      "['John', 'Carlos', 'Rodriguez']\n"
      ]
     }
    ],
    "source": [
+    "# Application of lambda:\n",
     "# sort names based on their string length\n",
-    "names = [\"Charlie\", \"Alice\", \"Bob\"]\n",
-    "sorted_names = sorted(names, key=lambda x: len(x))\n",
-    "print(sorted_names)  # Output: ['Bob', 'Alice', 'Charlie']"
+    "names = [\"John\", \"Rodriguez\", \"Carlos\"]\n",
+    "sorted_names = sorted(names) # sorts alphabetically\n",
+    "print(sorted_names) \n",
+    "\n",
+    "sorted_names = sorted(names, key=lambda x: len(x)) # sort names based on their string length\n",
+    "print(sorted_names)  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0745602d-fb5a-4235-bf39-71fa7bd4c489",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -100,28 +116,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "a471a3f1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50.0\n",
+      "[32.0, 50.0, 68.0, 86.0, 104.0]\n"
+     ]
+    }
+   ],
    "source": [
     "# The map() function applies a function to every item in an iterable (like a list).\n",
     "\n",
-    "# Example: Convert a List of Temperatures from Celsius to Fahrenheit\n",
-    "temps_celsius = [0, 10, 20, 30, 40]\n",
+    "# STEP1: do it for 1 value\n",
     "\n",
     "def to_faren(c):\n",
     "    return (c * 9/5) + 32\n",
     "\n",
-    "# Convert to Fahrenheit using map()\n",
-    "temps_fahrenheit = list(map(to_faren, temps_celsius))\n",
+    "c = 10\n",
+    "f = to_faren(c)\n",
+    "print(f)\n",
     "\n",
-    "print(temps_fahrenheit)"
+    "\n",
+    "# STEP2: do it for 1 value: Convert a List of Temperatures from Celsius to Fahrenheit\n",
+    "\n",
+    "def to_faren(c):\n",
+    "    return (c * 9/5) + 32\n",
+    "\n",
+    "c = [0, 10, 20, 30, 40]\n",
+    "f = list(map(to_faren, c)) # Convert to Fahrenheit using map()\n",
+    "print(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "98a11ff1-8164-446c-84f1-6e80bb83b7a1",
    "metadata": {},
    "outputs": [
@@ -129,20 +162,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<map object at 0x0000014B3F34EBC0>]\n"
+      "[32.0, 50.0, 68.0, 86.0, 104.0]\n"
      ]
     }
    ],
    "source": [
-    "# The map() function applies a function to every item in an iterable (like a list).\n",
+    "# Now I use map+lambda function \n",
     "\n",
     "# Example: Convert a List of Temperatures from Celsius to Fahrenheit\n",
-    "temps_celsius = [0, 10, 20, 30, 40]\n",
+    "c = [0, 10, 20, 30, 40]\n",
     "\n",
     "# Convert to Fahrenheit using map()\n",
-    "temps_fahrenheit = list(map(lambda c: (c * 9/5) + 32, temps_celsius))\n",
+    "f = list(map(lambda c: (c * 9/5) + 32, c))\n",
     "\n",
-    "print(temps_fahrenheit)"
+    "print(f)"
    ]
   },
   {
@@ -243,7 +276,7 @@
    ],
    "source": [
     "status_list = [False, False, True, False]\n",
-    "result = any(status_list)\n",
+    "result = any(status_list) # Check If At Least One Element is True\n",
     "\n",
     "print(result) \n"
    ]
@@ -368,7 +401,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
